--- a/Step0/WorkLog/worklog.org
+++ b/Step0/WorkLog/worklog.org
@@ -590,11 +590,14 @@ $ ldd hello
 
 j'ai mis les librairies prises dans "debian-initrd" dans Minidist/lib
 Le boot fonctionne quand je boot depuis le disque, pas avec initrd.
-Je pense que cela vient du fait que les librairies que j'ai mis sous /lib 
-ne sont pas contenue dans initrd.hello (pour cela il faudrait modifier le makefile pour qu'il ne contienne pas que le programme hello mais aussi les librairies dont le programem a besoin ?
+Je pense que cela vient du fait que les librairies que j'ai mis sous /lib ne sont pas contenue dans initrd.hello.
+Pour que cela marche il faudrait modifier le makefile pour qu'il ne contienne pas que le programme hello, mais aussi les librairies dont le programme a besoin ?
 
 
 *** The shell Setup
 
-j'ai mis le script "init" sous Minidist/init et changé les entrées dans le menu de GRUB
+**** The script "init"
+j'ai mis le script "init" sous Minidist/init et changé les entrées dans le menu de GRUB.
+Cela ne fonctionne pas car il n'y a pas de shell défini dans notre distributions pour le moment...
+Je me suis arrêté la.
 
